; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_agraph.c_place_nodes_val.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_agraph.c_place_nodes_val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32*, i32)* @place_nodes_val to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @place_nodes_val(i32* %0, i32* %1, i32* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %23

14:                                               ; preds = %5
  %15 = load i32*, i32** %10, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = call i32 @hash_get_int(i32* %15, i32* %16)
  %18 = load i32*, i32** %7, align 8
  %19 = load i32*, i32** %9, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @dist_nodes(i32* %18, i32* %19, i32* %20)
  %22 = add nsw i32 %17, %21
  store i32 %22, i32* %6, align 4
  br label %32

23:                                               ; preds = %5
  %24 = load i32*, i32** %10, align 8
  %25 = load i32*, i32** %9, align 8
  %26 = call i32 @hash_get_int(i32* %24, i32* %25)
  %27 = load i32*, i32** %7, align 8
  %28 = load i32*, i32** %8, align 8
  %29 = load i32*, i32** %9, align 8
  %30 = call i32 @dist_nodes(i32* %27, i32* %28, i32* %29)
  %31 = sub nsw i32 %26, %30
  store i32 %31, i32* %6, align 4
  br label %32

32:                                               ; preds = %23, %14
  %33 = load i32, i32* %6, align 4
  ret i32 %33
}

declare dso_local i32 @hash_get_int(i32*, i32*) #1

declare dso_local i32 @dist_nodes(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
